Release CMTK-2.2.5:


Release CMTK-2.2.4 (2012-08-24):

(r4498) Fixed: some PACS-processed Siemens mosaic DICOM files have lost
	some DCM tags; missing information must be parsed from CSA headers
	instead.
(r4485) Fixed: echo planar image unwarping created NaN deformations if any of
        the image columns was all zeroes, because no center of mass could be
        computed. For these cases, deformation is now forced to zero
        initially.


Release CMTK-2.2.3 (2012-08-10):

(r4475) Added: new "contrib" directory for third-party contributions;
	initially Greg Jefferis' "munger" Perl script.
(r4470) Added: new "groupwise_reformat" script simplifies reformatting all
	images in a set aligned with one of the groupwise registration
	tools.
(r4458) Fixed: older versions of FFTW than 3.3.2 now supported again.
(r4456) Fixed: when reading NRRD files with missing "spaceOrigin" entry,
	CMTK now substitutes a zero-vector for the origin, rather than
	keeping NrrdIO's not-a-number values.
(r4454) Fixed: the index-to-physical matrix of a UniformVolume was not
	properly modified when downsampling with pixel selection (rather than
	averaging).
(r4449) Added: when installed system mxml library is found, its version is
	determined, and the bundled library is automatically built if the
	system library is outdated (pre-2.7).
(r4447) Added: new tool, "dwi_find_bad_slices," to detect bad slices in
	sets of diffusion-weighted images.
(r4447) Changed: image-to-physical matrix and slice spacing now work
	properly (as in, without generating Inf/NaN values) when splitting
	volume into single slices and re-stacking it. This has caused some
	baselines to change, because the volume field of view sizes have
	seen subtle changes as a result.


Release CMTK-2.2.2 (2012-06-18):

(r4438) Added: new tools "fit_spline_xform" and "fit_affine_xform" to fit
    a single B-spline or affine transformation, respectively, to a list of
    concentated, optionally inverted, transformations.