@@ -1,5 +1,9 @@
 Release CMTK-2.2.5:
 
+(rXXXX) Added: "dcm2image" tool can now write single-slice images also
+	(these were skipped previously). Use the new
+	"--write-single-slices" command line switch to activate this
+	behaviour.
 
 Release CMTK-2.2.4 (2012-08-24):
 
